fix about page photo overflow content by scrollReveal

--- a/src/index.scss
+++ b/src/index.scss
@@ -728,6 +728,9 @@ nav .p-collapsed {
 }
 /* End of members page */
 /* about us page */
+.pages-about .pages-about__photos {
+	overflow-y: hidden;
+}
 @-webkit-keyframes p-fadeInLeft {
   from {
     opacity: 0;
